v1/lox.grammar
program     -> declaration* eof ;

declaration -> funDecl
            | varDecl
            | statement ;

funDecl     -> "fun" function ;

varDecl     -> "var" IDENTIFIER ( "=" expression )? ";" ;

function    -> IDENTIFIER "(" parameters? ")" block ;

parameters  -> IDENTIFIER ( "," IDENTIFIER )* ;

statement   -> exprStmt
            | forStmt
            | ifStmt
            | printStmt
            | returnStmt
            | whileStmt
            | blockStmt ;

exprStmt    -> expression ";" ;

forStmt     -> "for" "(" (varDecl | exprStmt | ";" ) expression? ";" expression? ")" statement ;

ifStmt      -> "if" "(" expression ")" statement ( "else" statement )? ;

printStmt   -> "print" expression ";" ;

returnStmt   -> "return" expression? ";" ;

whileStmt   -> "while" "(" expression ")" statement ;

blockStmt   -> "{" declaration* "}" ;

expression  -> assignment ;

assignment  -> identifier ( "=" assignment )?
            | logic_or ;

logic_or    -> logic_and ( "or " logic_and )* ;

logic_and   -> equality ( "and" equality )* ;

equality    -> comparison ( ( "!=" | "==" ) comparison )* ;

comparison  -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;

term        -> factor ( ( "-" | "+" ) factor )* ;

factor      -> unary ( ( "/" | "*" ) unary )* ;

unary       -> ( "!" | "-" ) unary
            | call ;

call        -> primary ( "(" arguments? ")" )* ;

arguments   -> expression ( "," expression )* ;

primary     -> NUMBER | STRING
            | "false" | "true" | "nil"
            | "(" expression ")"
            | IDENTIFIER ;
